--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@
 					<name>Praharsh Nanavati</name>
 				  </p>
 				<p>
-					I am a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc </a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, and am working on Causal Fairness in Machine Learning.
-					Previously, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
+					I am an incoming Doctoral Student at the <a href="https://www.csa.iisc.ac.in/" target="_blank">RTG on Neuroexplicit Models at Saarland University</a>.
+					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc </a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, working on Causal Fairness in Machine Learning.
+					Before that, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
 					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
 					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
-				</p>
-				<p>
-				I am currently looking for doctoral positions in Causal Inference and Learning Theory. 
 				</p>
 
 				<p style="text-align:center">
@@ -106,7 +104,8 @@
 			<p>
             <div style="width:120%;overflow-y:scroll; height:170px;">
                 <ul id="news">
-					<li><span style="color:rgb(22, 208, 214)">November 2024</span>: Submitted <a href="https://niftynans.github.io/pubs.html">Preprint</a> to CLeaR 2025!</li>
+					<li><span style="color:rgb(22, 208, 214)">May 2025</span>: Accepted PhD offer from the <a href="https://www.neuroexplicit.org/about/">RTG on Neuroexplicit Models at Saarland University</a>!</li>
+					<li><span style="color:rgb(22, 208, 214)">May 2025</span>: Arxiv <a href="https://arxiv.org/pdf/2504.20579">Preprint</a> on Causal Representation Learning now available online.</li>
 					<li><span style="color:rgb(22, 208, 214)">July 2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
 					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: CODS-COMAD 2024: Student Participant & Travel Grant Recipient.</li>
 					<li><span style="color:rgb(22, 208, 214)">December 2023</span>: Invited Talk: <a href="https://www.youtube.com/watch?v=4PqNgfzFARI" target="_blank"><i>"Causality and Network Science"</i></a> at the ACM Winter School on Network Science.</li>
