--- a/pubs.html
+++ b/pubs.html
@@ -82,9 +82,9 @@
                   <strong>Praharsh Nanavati</strong>, Ranjitha Prasad and Karthikeyan Shanmugam
                   <br>
                   <p></p>
-                  <em> Submitted to CLeaR 2025</em>
+                  <em> Arxiv Preprint</em>
                   <div class="paper" id="hylinucb-2024">
-                    <a href="" target="_blank">paper</a> / <!-- ENTER PAPER LINK HERE LATER -->
+                    <a href="https://arxiv.org/pdf/2504.20579" target="_blank">paper</a> / 
                       <a class="tog" href="javascript:toggleblock('app_abs_hylinucb-24')">abstract</a> / 
                       <a class="tog" href="javascript:toggleblock('app_bib_hylinucb-24')">bibtex</a>
                       <p align="justify">
@@ -93,13 +93,12 @@
                         </i>
                       </p>
                       <bibtext xml:space="preserve" id="app_bib_hylinucb-24">
-                        <!-- @InProceedings{das2024linear, </br>
-                          author="Das, Nirjhar,
-                          Sinha, Gaurav", </br>
-                          title="Linear Contextual Bandits with Hybrid Payoffs: Revisited",</br>
-                          booktitle="European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases", </br>
-                          year="2024" </br>
-                        } ENTER BIBTEX CITATION HERE--> 
+                        @article{nanavati2025representation,
+                          title={Representation Learning Preserving Ignorability and Covariate Matching for Treatment Effects},
+                          author={Nanavati, Praharsh and Prasad, Ranjitha and Shanmugam, Karthikeyan},
+                          journal={arXiv preprint arXiv:2504.20579},
+                          year={2025}
+                        } 
                         </bibtext>
                     </div>              
                     <script language="JavaScript">hideblock('app_bib_hylinucb-24');hideblock('app_abs_hylinucb-24');</script>
