--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 				  </p>
 				<p>
 					I am an incoming Doctoral Student at the <a href="https://www.csa.iisc.ac.in/" target="_blank">RTG on Neuroexplicit Models at Saarland University</a>.
-					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc </a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, working on Causal Fairness in Machine Learning.
+					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc, working on Causal Fairness in Machine Learning.
 					Before that, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
-					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
+					I am fortunate to have been advised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman</a> at IIsc, and co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
 					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
 				</p>
 
 				<p style="text-align:center">
-					<a href="mailto:praharsh19@iiserb.ac.in">Email</a> &nbsp/&nbsp
+					<a href="mailto:praharsh.nanavati@gmail.com">Email</a> &nbsp/&nbsp
 					<a href="data/CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
 					<a href="https://scholar.google.com/citations?hl=en&user=Imx0mr0AAAAJ&view_op=list_works" target="_blank">Google Scholar</a> &nbsp/&nbsp
 					<a href="https://www.linkedin.com/in/praharsh-nanavati-b07a091aa/" target="_blank">Linkedin</a> &nbsp/&nbsp
