--- a/experience.html
+++ b/experience.html
@@ -71,7 +71,7 @@
                     <td width="15%" valign="center" align="center"><img src="images/IISc.jpg" alt="iisc" width="50" height="50"></td>
                     <td width="85%" valign="top">
                         <p>
-                            <span><strong>Predoctoral Researcher</strong></span><span style="float:right">Aug 2024 - Present</span> <br>
+                            <span><strong>Predoctoral Researcher</strong></span><span style="float:right">Aug 2024 - Apr 2025</span> <br>
                             <em><a href="https://csa.iisc.ac.in/" target="_blank">Indian Institute of Science (IISc)</a></em>
                             <br>
                             Research Area: Causal Fairness Analysis and Theoretical Machine Learning
