--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 					<name>Praharsh Nanavati</name>
 				  </p>
 				<p>
-					I am an incoming Doctoral Student at the <a href="https://www.csa.iisc.ac.in/" target="_blank">RTG on Neuroexplicit Models at Saarland University</a>.
-					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc, working on Causal Fairness in Machine Learning.
+					I am an incoming Doctoral Student at the <a href="https://www.csa.iisc.ac.in/" target="_blank">RTG on Neuroexplicit Models</a> at Saarland University.
+					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA</a> Department at IISc, working on Causal Fairness in Machine Learning.
 					Before that, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
 					I am fortunate to have been advised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman</a> at IIsc, and co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
