--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA</a> Department at IISc, working on Causal Fairness in Machine Learning.
 					Before that, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
-					I am fortunate to have been advised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman</a> at IIsc, and co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
+					I am fortunate to have been advised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman</a> at IISc, and co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
 					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
 				</p>
 
@@ -104,6 +104,7 @@
 			<p>
             <div style="width:120%;overflow-y:scroll; height:170px;">
                 <ul id="news">
+					<li><span style="color:rgb(22, 208, 214)">June 2025</span>: I will be presenting a poster at the workshop on <a href="https://www.newton.ac.uk/event/RCLW03/">Accelerating statistical inference and experimental design with machine learning</a> at University of Cambridge</a>!</li>
 					<li><span style="color:rgb(22, 208, 214)">May 2025</span>: Accepted PhD offer from the <a href="https://www.neuroexplicit.org/about/">RTG on Neuroexplicit Models at Saarland University</a>!</li>
 					<li><span style="color:rgb(22, 208, 214)">May 2025</span>: Arxiv <a href="https://arxiv.org/pdf/2504.20579">Preprint</a> on Causal Representation Learning now available online.</li>
 					<li><span style="color:rgb(22, 208, 214)">July 2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
@@ -146,7 +147,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:left;font-size:small;">
-                  Updated on: 15th November, 2024
+                  Updated on: 23rd May, 2025
     
               <span style="float:right;">
                 Thank you for this template, <a href="https://jonbarron.info/" target="_blank">Jon Barron</a>!  :D
