--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<p>
             <div style="width:120%;overflow-y:scroll; height:170px;">
                 <ul id="news">
-					<li><span style="color:rgb(22, 208, 214)">June 2025</span>: I will be presenting a poster at the workshop on <a href="https://www.newton.ac.uk/event/RCLW03/">Accelerating statistical inference and experimental design with machine learning</a> at University of Cambridge</a>!</li>
+					<li><span style="color:rgb(22, 208, 214)">June 2025</span>: I will be presenting a poster at a <a href="https://www.newton.ac.uk/event/RCLW03/">workshop</a> at the University of Cambridge</a>!</li>
 					<li><span style="color:rgb(22, 208, 214)">May 2025</span>: Accepted PhD offer from the <a href="https://www.neuroexplicit.org/about/">RTG on Neuroexplicit Models at Saarland University</a>!</li>
 					<li><span style="color:rgb(22, 208, 214)">May 2025</span>: Arxiv <a href="https://arxiv.org/pdf/2504.20579">Preprint</a> on Causal Representation Learning now available online.</li>
 					<li><span style="color:rgb(22, 208, 214)">July 2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
