--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<name>Praharsh Nanavati</name>
 				  </p>
 				<p>
-					I am an incoming Doctoral Student at the <a href="https://www.csa.iisc.ac.in/" target="_blank">RTG on Neuroexplicit Models</a> at Saarland University.
+					I am an incoming Doctoral Student at the <a href="https://www.neuroexplicit.org/about/" target="_blank">RTG on Neuroexplicit Models</a> at Saarland University.
 					I was previously a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA</a> Department at IISc, working on Causal Fairness in Machine Learning.
 					Before that, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
